--- a/index.html
+++ b/index.html
@@ -20,13 +20,20 @@
 
   <link rel="manifest" href="site.webmanifest">
   <meta name="theme-color" content="#fafafa">
+  <!-- Place favicon.ico in the root directory -->
+  <script src="js/libraries/p5.min.js" type="module"></script>
+  <script src="js/libraries/addons/p5.sound.js" type="module"></script>
+  <script src="js/sketch2.js" type="module"></script>
 </head>
 
 <body>
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/app.js"></script>
+  <div id="sketch-pacman"></div>
+  <div id="error-holder"></div>
+<!--<media src="/error.gif" alt="Error de carga">-->
+  <img src="media/pac.png" alt="pacman">
 
 </body>
 
